# AbotMe

./: .dockerignore  .gitignore  LICENSE  Makefile  README.md  asset-manifest.json  docker-compose.yml  global_rules.md  index.html  railway.json  scenario.md
backend/: .env.example  .flake8  Dockerfile  main.py  pyproject.toml  pytest.ini  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 0523e37f253a_init.py  08d11c2b843d_init.py  18354199f3b9_question에서_answer_refer할_수_있도록_수정.py  5c650029887b_init.py  8ae75ac362b6_init.py  9e54f584f863_init.py  e6b3b143c020_add_tags_relationship_to_question.py  f59ad5a0ce7b_add_tag_table_and_enum.py
backend/app/: dependencies.py  main.py
backend/app/data_pipeline/: base.py  pdf_resume.py  utils.py
backend/app/data_pipeline/chunk/: agentic_chunker.py  base.py  simple_chunker.py
backend/app/data_pipeline/extract/: __init__.py  base.py  pdf_resume_extractor.py  pdf_resume_metadata_extractor.py
backend/app/data_pipeline/prompts/: __init__.py  chat_prompt.py  qna_prompt.py  resume_prompt.py  text_to_cypher_prompt.py  user_query_prompt.py
backend/app/data_pipeline/write/: base.py  (+2 more)
backend/app/database/: session.py  uow.py
backend/app/llm/: graph_rag_engine.py  langchain_gemini_client.py  llm_client.py  rag_engine.py  user_message_handler.py
backend/app/middleware/: cors.py
backend/app/models/: schemas.py
backend/app/routers/: chat.py  faq.py  history.py  pdf.py  resume.py  token.py  vector_store.py
backend/app/services/: chat_service.py  data_service.py  faq_service.py  history_service.py  mappers.py  qna_service.py
backend/tests/: conftest.py  test_api.py  test_chat.py  test_chunking.py  test_faq.py  test_graph_db.py  test_history.py  test_main.py  test_pdf_resume_chunker.py  test_pdfplumber_bbox.py  test_resume_vectorstore_e2e.py
backend/tests/utils/: mocks.py
backend/vector-db/: chroma.sqlite3
(+106 files in other folders)
