[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.35.0",
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "flake8>=7.3.0",
    "langchain>=0.3.26",
    "langchain-google-genai>=2.1.6",
    "langchain-community>=0.3.27",
    "langchain-text-splitters>=0.3.8",
    "anyio>=4.9.0",
    "black>=25.1.0",
    "click>=8.2.1",
    "pydantic-core>=2.33.2",
    "pyflakes>=3.4.0",
    "starlette>=0.46.2",
    "pydantic>=2.11.7",
    "chromadb>=1.0.15",
]
